redundant publication list is redundant
using ORCID instead

--- a/index.html
+++ b/index.html
@@ -190,66 +190,8 @@
    <a href="https://www.linkedin.com/in/kent-steer-8a247058">Kent</a>.
 </p>
 
-
-
-<h3>
-   <a id="publications" class="anchor" href="#recent" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-   Publications
-</h3>
-
-<i style="color:#dbdbdb" >(in reverse chronological order)</i>
-<br>
-
-<p>
-<b>Improved Spatial Organisation of Sensor Networks to Reduce Wildfire Impact</b> | D.M.Budden,  and X.Zhong and M.Almashor and K.Steer | DOI: 10.1504/IJEM.2018.090887 | International Journal of Emergency Management | ISSN: 1741-5071  
-</p>
-
-<p>
-<b>On the Utility of Shelters in Wildfire Evacuations</b> | K.Steer, E.Abebe, M.Almashor, A.Beloglazov X.Zhong | DOI: 10.1016/j.firesaf.2017.09.001 | Fire Safety Journal | ISSN: 0379-7112
-</p>
-
-<p>
-<b>Simulation of Wildfire Evacuation with Dynamic Factors and Model Composition</b> | A.Beloglazov, M.Almashor, E.Abebe, J.Richter and K.C.B.Steer | DOI: 10.1016/j.simpat.2015.10.002 | Simulation Modelling Practice and Theory (SimPAT) | ISSN: 1569-190X
-</p>
-
-<p>
-<b>Enhancing Availability in Content Delivery Networks for Mobile Platforms</b> | M.Almashor, I.Khalil, Z.Tari, A.Zomaya and S.Sahni | DOI: 10.1109/TPDS.2013.2297927 | Transactions of Parallel and Distributed Systems (TPDS), IEEE | ISSN: 1045-9219
-</p>
-
-<p>
-<b>Automatic and Autonomous Load Management in Peer-to-peer Virtual Environments</b> | M.Almashor, I.Khalil, Z.Tari and A.Zomaya | DOI: 10.1109/JSAC.2013.SUP.0513028 | Journal on Selected Areas in Communications (JSAC), IEEE | ISSN: 0733-8716
-</p>
-
-<p>
-<b>Fully Peer-to-Peer Virtual Environments with 3D Voronoi Diagrams</b> | M.Almashor and I.Khalil | DOI: 10.1007/s00607-012-0197-9 | Computing, Springer | ISSN: 1436-5057
-</p>
-
-<p>
-<b>Timely Arbitrator Selection in P2P Virtual Environments with 3D Voronoi Diagrams</b> | M.Almashor and I.Khalil | DOI: 10.1109/NCA.2011.40 | 10th International Symposium on Network Computing and Applications (NCA) | August 2011
-</p>
-
-<p>
-<b>Load-Balancing Properties of 3D Voronoi Diagrams in Peer-to-Peer Virtual Environments</b> | M.Almashor and I.Khalil | DOI: 10.1109/ICPADS.2010.97 | 16th International Conference on Parallel and Distributed Systems (ICPADS) | December 2010
-</p>
-
-<p>
-<b>Reducing Network Load in Large-Scale, Peer-to-peer Virtual Environments with 3D Voronoi Diagrams</b> | M.Almashor and I.Khalil | DOI: 10.1109/HIPC.2010.5713197 | 17th International Conference on High Performance Computing (HiPC) | December 2010
-</p>
-
-<p>
-<b>Dynamic Gameplay Arbitrators with 3D Voronoi Diagrams</b> |
-M.Almashor, I.Khalil and G.Leach | DOI: 10.1109/NCA.2010.46 | 9th International Symposium on Network Computing and Applications (NCA) | July 2010
-</p>
-
-<p>
-<b>Realtime physiological condition and location monitoring of street orienteering participants</b> | I.Khalil, M.Almashor and F.Sufi | DOI: 10.1109/ITAB.2009.5394360 | 9th International Conference on Information Technology and Applications in Biomedicine (ITAB) | November 2009
-</p>
-
-<br>
-<br>
-
 <p align="center">
-   <g-emoji alias="information_source" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2139.png">ℹ️</g-emoji> <g-emoji alias="heart" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji> <img class="emoji" title=":octocat:" alt=":octocat:" src="https://assets-cdn.github.com/images/icons/emoji/octocat.png" height="20" width="20" align="absmiddle">
+   <g-emoji alias="information_source" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2139.png">ℹ️</g-emoji> <g-emoji alias="heart" fallback-src="https://assets-cdn.github.com/images/icons/emoji/unicode/2764.png">❤️</g-emoji> <img class="emoji" title=":octocat:" alt=":octocat:" src="https://github.githubassets.com/images/icons/emoji/octocat.png" height="20" width="20" align="absmiddle">
 </p>
 
 </section>
