--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
 
 <header>
    <h1>Mahathir Almashor</h1>
-   <p>Life is short. Have fun coding 🤓</p>
+   <p>Getting it done 🤓</p>
 </header>
 
 <div id="banner">
    <span id="logo"></span>
 
    <div class="linkdiv">
-      <a href="https://research.csiro.au/distributed-systems-security/people/staff/" class="button link"><strong>Work</strong></a>
+      <a href="https://people.csiro.au/A/M/mahathir-almashor" class="button link"><strong>Work</strong></a>
       <a href="https://github.com/ma-al" class="button link"><strong>Code</strong></a>
       <a href="https://orcid.org/0000-0002-3846-6282" class="button link"><strong>Papers</strong></a>
    </div>
